Added fallback method to fetch data from GitHub #2